@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2012/10/03 00:20:15 asau Exp $
+# $NetBSD: Makefile,v 1.5 2012/10/03 21:54:10 wiz Exp $
 
-DISTNAME=	Unicode-Normalize-1.14
+DISTNAME=	Unicode-Normalize-1.16
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	converters perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Unicode/}
 
