@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1.1.1 2012/02/12 18:40:42 abs Exp $
+$NetBSD: distinfo,v 1.2 2012/04/01 19:11:52 rhaen Exp $
 
-SHA1 (Unicode-Normalize-1.14.tar.gz) = 046354775c68ffbae6b64c06609d290d8894b072
-RMD160 (Unicode-Normalize-1.14.tar.gz) = fcef4d5cd43a8028fb47a7d52629d8a84dd6c9a9
-Size (Unicode-Normalize-1.14.tar.gz) = 26773 bytes
+SHA1 (Unicode-Normalize-1.16.tar.gz) = 5a00158bd37ef0d7deeb1001ad08028597d6bc00
+RMD160 (Unicode-Normalize-1.16.tar.gz) = 7399a61aa854a6421d088e02a692e69856eda8fc
+Size (Unicode-Normalize-1.16.tar.gz) = 27341 bytes
