@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.33 2011/10/04 03:07:53 hiramatsu Exp $
+# $NetBSD: Makefile,v 1.34 2012/10/31 11:16:57 asau Exp $
 
 DISTNAME=	flim-1.14.9
 PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
@@ -7,7 +7,7 @@ CATEGORIES=	devel
 MASTER_SITES=	http://www.kanji.zinbun.kyoto-u.ac.jp/~tomo/comp/emacsen/lisp/flim/flim-1.14/
 
 MAINTAINER=	tech-pkg-ja@jp.NetBSD.org
-HOMEPAGE=	http://www.kanji.zinbun.kyoto-u.ac.jp/~tomo/elisp/FLIM/
+HOMEPAGE=	http://git.chise.org/elisp/flim/
 COMMENT=	Emacs lisp library for message representation/encoding
 LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
