@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2005/02/23 22:24:29 agc Exp $
+$NetBSD: distinfo,v 1.3 2008/05/28 21:10:32 abs Exp $
 
-SHA1 (Tree-DAG_Node-1.06.tar.gz) = 8f412087b33942df06f20ca7c2e8ea0bd2354742
-RMD160 (Tree-DAG_Node-1.06.tar.gz) = b3011e10cbfe8b1dbc7d3ee191e6dbe692b18d46
-Size (Tree-DAG_Node-1.06.tar.gz) = 32843 bytes
+SHA1 (Tree-DAG_Node-1.07.tgz) = 1a73b460dc78451112b13e2c00e8924be4ec239c
+RMD160 (Tree-DAG_Node-1.07.tgz) = 6b981ca11f34ee0a6052ccce6ea688049caeb2ca
+Size (Tree-DAG_Node-1.07.tgz) = 43278 bytes
