@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.3 2012/10/06 12:13:16 alnsn Exp $
+@comment $NetBSD: PLIST,v 1.4 2012/10/13 22:17:35 alnsn Exp $
 bin/callgrind_annotate
 bin/callgrind_control
 bin/cg_annotate
@@ -66,37 +66,37 @@ include/valgrind/pub_tool_vkiscnums.h
 include/valgrind/pub_tool_wordfm.h
 include/valgrind/pub_tool_xarray.h
 include/valgrind/valgrind.h
-include/valgrind/vki/vki-amd64-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-arm-${LOWER_OPSYS}.h
+include/valgrind/vki/vki-amd64-linux.h
+include/valgrind/vki/vki-arm-linux.h
 include/valgrind/vki/vki-darwin.h
-include/valgrind/vki/vki-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-mips32-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-posixtypes-amd64-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-posixtypes-arm-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-posixtypes-mips32-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-posixtypes-ppc32-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-posixtypes-ppc64-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-posixtypes-s390x-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-posixtypes-x86-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-ppc32-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-ppc64-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-s390x-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-scnums-amd64-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-scnums-arm-${LOWER_OPSYS}.h
+include/valgrind/vki/vki-linux.h
+include/valgrind/vki/vki-mips32-linux.h
+include/valgrind/vki/vki-posixtypes-amd64-linux.h
+include/valgrind/vki/vki-posixtypes-arm-linux.h
+include/valgrind/vki/vki-posixtypes-mips32-linux.h
+include/valgrind/vki/vki-posixtypes-ppc32-linux.h
+include/valgrind/vki/vki-posixtypes-ppc64-linux.h
+include/valgrind/vki/vki-posixtypes-s390x-linux.h
+include/valgrind/vki/vki-posixtypes-x86-linux.h
+include/valgrind/vki/vki-ppc32-linux.h
+include/valgrind/vki/vki-ppc64-linux.h
+include/valgrind/vki/vki-s390x-linux.h
+include/valgrind/vki/vki-scnums-amd64-linux.h
+include/valgrind/vki/vki-scnums-arm-linux.h
 include/valgrind/vki/vki-scnums-darwin.h
-include/valgrind/vki/vki-scnums-mips32-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-scnums-ppc32-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-scnums-ppc64-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-scnums-s390x-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-scnums-x86-${LOWER_OPSYS}.h
-include/valgrind/vki/vki-x86-${LOWER_OPSYS}.h
+include/valgrind/vki/vki-scnums-mips32-linux.h
+include/valgrind/vki/vki-scnums-ppc32-linux.h
+include/valgrind/vki/vki-scnums-ppc64-linux.h
+include/valgrind/vki/vki-scnums-s390x-linux.h
+include/valgrind/vki/vki-scnums-x86-linux.h
+include/valgrind/vki/vki-x86-linux.h
 lib/pkgconfig/valgrind.pc
 lib/valgrind/32bit-core-valgrind-s1.xml
 lib/valgrind/32bit-core-valgrind-s2.xml
 lib/valgrind/32bit-core.xml
-lib/valgrind/32bit-${LOWER_OPSYS}-valgrind-s1.xml
-lib/valgrind/32bit-${LOWER_OPSYS}-valgrind-s2.xml
-lib/valgrind/32bit-${LOWER_OPSYS}.xml
+lib/valgrind/32bit-linux-valgrind-s1.xml
+lib/valgrind/32bit-linux-valgrind-s2.xml
+lib/valgrind/32bit-linux.xml
 lib/valgrind/32bit-sse-valgrind-s1.xml
 lib/valgrind/32bit-sse-valgrind-s2.xml
 lib/valgrind/32bit-sse.xml
@@ -106,18 +106,18 @@ lib/valgrind/64bit-avx.xml
 lib/valgrind/64bit-core-valgrind-s1.xml
 lib/valgrind/64bit-core-valgrind-s2.xml
 lib/valgrind/64bit-core.xml
-lib/valgrind/64bit-${LOWER_OPSYS}-valgrind-s1.xml
-lib/valgrind/64bit-${LOWER_OPSYS}-valgrind-s2.xml
-lib/valgrind/64bit-${LOWER_OPSYS}.xml
+lib/valgrind/64bit-linux-valgrind-s1.xml
+lib/valgrind/64bit-linux-valgrind-s2.xml
+lib/valgrind/64bit-linux.xml
 lib/valgrind/64bit-sse-valgrind-s1.xml
 lib/valgrind/64bit-sse-valgrind-s2.xml
 lib/valgrind/64bit-sse.xml
 lib/valgrind/amd64-avx-coresse-valgrind.xml
 lib/valgrind/amd64-avx-coresse.xml
-lib/valgrind/amd64-avx-${LOWER_OPSYS}-valgrind.xml
-lib/valgrind/amd64-avx-${LOWER_OPSYS}.xml
+lib/valgrind/amd64-avx-linux-valgrind.xml
+lib/valgrind/amd64-avx-linux.xml
 lib/valgrind/amd64-coresse-valgrind.xml
-lib/valgrind/amd64-${LOWER_OPSYS}-valgrind.xml
+lib/valgrind/amd64-linux-valgrind.xml
 lib/valgrind/arm-core-valgrind-s1.xml
 lib/valgrind/arm-core-valgrind-s2.xml
 lib/valgrind/arm-core.xml
@@ -135,7 +135,7 @@ lib/valgrind/exp-dhat-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}
 lib/valgrind/exp-sgcheck-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}
 lib/valgrind/helgrind-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}
 lib/valgrind/i386-coresse-valgrind.xml
-lib/valgrind/i386-${LOWER_OPSYS}-valgrind.xml
+lib/valgrind/i386-linux-valgrind.xml
 lib/valgrind/lackey-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}
 lib/valgrind/libcoregrind-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}.a
 lib/valgrind/libreplacemalloc_toolpreload-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}.a
@@ -151,15 +151,15 @@ lib/valgrind/mips-cpu.xml
 lib/valgrind/mips-fpu-valgrind-s1.xml
 lib/valgrind/mips-fpu-valgrind-s2.xml
 lib/valgrind/mips-fpu.xml
-lib/valgrind/mips-${LOWER_OPSYS}-valgrind.xml
-lib/valgrind/mips-${LOWER_OPSYS}.xml
+lib/valgrind/mips-linux-valgrind.xml
+lib/valgrind/mips-linux.xml
 lib/valgrind/none-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}
 lib/valgrind/power64-core-valgrind-s1.xml
 lib/valgrind/power64-core-valgrind-s2.xml
 lib/valgrind/power64-core.xml
-lib/valgrind/power64-${LOWER_OPSYS}-valgrind-s1.xml
-lib/valgrind/power64-${LOWER_OPSYS}-valgrind-s2.xml
-lib/valgrind/power64-${LOWER_OPSYS}.xml
+lib/valgrind/power64-linux-valgrind-s1.xml
+lib/valgrind/power64-linux-valgrind-s2.xml
+lib/valgrind/power64-linux.xml
 lib/valgrind/power-altivec-valgrind-s1.xml
 lib/valgrind/power-altivec-valgrind-s2.xml
 lib/valgrind/power-altivec.xml
@@ -169,9 +169,9 @@ lib/valgrind/power-core.xml
 lib/valgrind/power-fpu-valgrind-s1.xml
 lib/valgrind/power-fpu-valgrind-s2.xml
 lib/valgrind/power-fpu.xml
-lib/valgrind/power-${LOWER_OPSYS}-valgrind-s1.xml
-lib/valgrind/power-${LOWER_OPSYS}-valgrind-s2.xml
-lib/valgrind/power-${LOWER_OPSYS}.xml
+lib/valgrind/power-linux-valgrind-s1.xml
+lib/valgrind/power-linux-valgrind-s2.xml
+lib/valgrind/power-linux.xml
 lib/valgrind/powerpc-altivec32l-valgrind.xml
 lib/valgrind/powerpc-altivec32l.xml
 lib/valgrind/powerpc-altivec64l-valgrind.xml
@@ -187,9 +187,9 @@ lib/valgrind/s390x-core64-valgrind-s2.xml
 lib/valgrind/s390x-core64.xml
 lib/valgrind/s390x-generic-valgrind.xml
 lib/valgrind/s390x-generic.xml
-lib/valgrind/s390x-${LOWER_OPSYS}64-valgrind-s1.xml
-lib/valgrind/s390x-${LOWER_OPSYS}64-valgrind-s2.xml
-lib/valgrind/s390x-${LOWER_OPSYS}64.xml
+lib/valgrind/s390x-linux64-valgrind-s1.xml
+lib/valgrind/s390x-linux64-valgrind-s2.xml
+lib/valgrind/s390x-linux64.xml
 lib/valgrind/vgpreload_core-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}.so
 lib/valgrind/vgpreload_drd-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}.so
 lib/valgrind/vgpreload_exp-dhat-${VGCONF_ARCH_PRI}-${LOWER_OPSYS}.so
