@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.86 2012/10/03 19:59:47 adam Exp $
+$NetBSD: distinfo,v 1.87 2012/10/16 13:21:31 obache Exp $
 
-SHA1 (perl-5.16.1.tar.gz) = 60f2b81e3ffaff3030962ccbc02cd04f91f69ad5
-RMD160 (perl-5.16.1.tar.gz) = c1e69440727c773d5f012e735e77bf3d6a6fa342
-Size (perl-5.16.1.tar.gz) = 15733676 bytes
+SHA1 (perl-5.16.2.tar.gz) = 9e20e38e3460ebbac895341fd70a02189d03a490
+RMD160 (perl-5.16.2.tar.gz) = 84f0233ac48059b4636661b023dd8a3389f9ae64
+Size (perl-5.16.2.tar.gz) = 16933974 bytes
 SHA1 (patch-aa) = 9066746c6e6ed0d58962f52de1ae773e210cfcb5
 SHA1 (patch-ab) = a9c674c5b09700d13fa885f11a3525d6d54899b5
 SHA1 (patch-ac) = cd918ae7aedddfcd3d555a1d1388c4c8719ccd12
