@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.40 2012/10/03 21:58:20 wiz Exp $
+# $NetBSD: Makefile,v 1.41 2012/10/08 13:04:24 asau Exp $
 
-DISTNAME=	DateTime-TimeZone-1.46
+DISTNAME=	DateTime-TimeZone-1.53
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	time perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DateTime/}
 
