@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.30 2010/08/26 06:32:06 sno Exp $
+$NetBSD: distinfo,v 1.31 2012/04/22 12:25:26 wiz Exp $
 
-SHA1 (DateTime-TimeZone-1.46.tar.gz) = ecb425c1094ab69fec472c4aa95764cd313a718a
-RMD160 (DateTime-TimeZone-1.46.tar.gz) = 4422d742f1ef428e2ece365000db17fa1f954984
-Size (DateTime-TimeZone-1.46.tar.gz) = 384097 bytes
+SHA1 (DateTime-TimeZone-1.53.tar.gz) = 9d39a7bf8c49fa402191108d69ad3b36ac40bf38
+RMD160 (DateTime-TimeZone-1.53.tar.gz) = 21892ed0ccf530260d1b005cb4ccf4f53fcb2ecd
+Size (DateTime-TimeZone-1.53.tar.gz) = 833903 bytes
