@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3495 2012/11/03 22:58:56 ryoon Exp $
+$NetBSD: CHANGES-2012,v 1.3499 2012/11/04 13:28:06 wen Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5339,3 +5339,7 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated mail/fetchmailconf to 6.3.22 [morr 2012-11-03]
 	Added fonts/sourcecodepro-fonts version 1.009 [ryoon 2012-11-03]
 	Updated net/p5-Net-Server to 2.006 [pettai 2012-11-03]
+	Updated lang/perl5 to 5.16.2 [adam 2012-11-04]
+	Updated converters/p5-Unicode-Normalize to 1.16 [wen 2012-11-04]
+	Updated time/p5-DateTime-TimeZone to 1.53 [wen 2012-11-04]
+	Updated devel/p5-Tree-DAG_Node to 1.07 [wen 2012-11-04]
